--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.8.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.1.5"
   }
 }
